<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="registerPwd"
        type="com.example.kotlin.fragment.PwdFragment" />


</data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pwdFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/registerPwTittle"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="113dp" />

    <TextView
        android:id="@+id/subTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:text="@string/registerPwSubTittle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/pwEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/registerPwdCheck"
        android:textSize="10sp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/subTextView"
        app:layout_constraintStart_toStartOf="@+id/subTextView"
        app:layout_constraintTop_toBottomOf="@+id/subTextView"
        tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pwCheckEditText"
            app:layout_constraintEnd_toEndOf="@+id/pwEditText"
            app:layout_constraintStart_toStartOf="@+id/pwEditText"
            app:layout_constraintTop_toBottomOf="@+id/pwEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/registerPwCheck2"
            android:singleLine="true"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="35dp" />

        <!-- 텍스트뷰로 수정-->
        <TextView
            android:id="@+id/btnActivityInfo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/registerPwdNext"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwCheckEditText"
            app:layout_constraintVertical_bias="0.101"
            tools:layout_editor_absoluteX="14dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
