<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="login"
            type="com.example.kotlin.activity.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="316dp"
            android:layout_height="69dp"
            android:gravity="center"
            android:src="@drawable/ic_login_title_image_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginTittle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp" />

       <!-- 그냥 edit도 아니고 이걸로 쓰는이유-->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/loginEmail"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:layout_editor_absoluteX="16dp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/loginPwd"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/editEmail"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="216dp"
            android:layout_height="42dp"
            android:layout_marginTop="76dp"
            android:text="@string/loginNextLogin"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPwd" />

        <TextView
            android:id="@+id/btnRegiter"
            android:layout_width="216dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:text="@string/LoginNextRegist"
            android:background="@drawable/shape"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>